
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Make error_handler_class available as service [#15162]
- UI improvements for site_name in header [#15180]
- Changed "remove" to "delete", "update" to "edit" in lexicons [#15155]
- Localize anonymous in context interface [#15153]
- Fix drop animation appearing at the wrong position for dragged elements [#15111]
- Resize static fields on statick checkbox toggle [#15100]
- Change xtype to textarea for description in grids [#15126]
- Change isfolder field in active resource [#15078]
- Use 0 if id is undefined [#15102]
- Set error message by field name instead of id [#15098]
- Fix typeAhead parameter check [#15069]
- Link to help localize MODX added to Help & Support [#15138]
- Prevent path traversal when sending registry message [#15134]
- Fix a second refresh of the grid when opening a combo box [#15123]
- New lexicon for edit content type [#15094]
- Fix resource drag & drop  setting `is_folder` to mark parent as container [#15076]
- Add numberfield as Field Type option for system settings [#15093]
- Remember filter properties for system setting grid from browser url [#15086]
- Prevent rewrite of .well-known directory used by LetsEncrypt [#15033]
- Allow custom values in Listbox (Multi-Select) TV [#14957]
- Fix DSN creation during an update with an existing port [#15083]
- Clear phpThumb connector properties [#15068]
- Date TV improvements [#15000]
- Improve navigation styles in element tree [#14989]
- Prevent overwriting apache_request_headers() in modRestServiceRequest [#15060]
- Fix checkbox toggling for custom context paths in setup [#15008]
- Remove references to safe_mode and related lexicons [#15058]
- Fix nested output filters [#14458]
- Add JSON Grid xtype [#14959]
- Fix `allowedFileTypes` being ignored in the Media Browser [#15046]